# CS5335Team3

./: README.md  params.yml  run.bash
docs/: robotics_lab_map.pgm  robotics_lab_map.yaml
src/battery_monitor/: package.xml  setup.py
src/battery_monitor/battery_monitor/: battery_monitor.py  patrol_loop.py  patrol_with_battery.py
src/battery_monitor/tests/: test_battery_monitor.py
src/endurance_test/: setup.py
src/endurance_test/endurance_test/: nav_to_pose.py  nav_to_pose_0.py
src/patrol/: package.xml  setup.cfg  setup.py
src/patrol/patrol/: patrol_loop.py  patrol_with_battery.py
